NXP-17285: make CommandlineService accept any parameter